wip: trying out jaxb model generation